<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal" >

    <TextView android:id="@+id/title" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/title"
        android:gravity="center_horizontal" android:layout_marginTop="20dp"
        android:textSize="40sp" android:textColor="@color/colorAccent" />

    <TextView android:id="@+id/section_radar" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text="@string/learning"
        android:gravity="center_horizontal" android:layout_marginTop="20dp"
        android:textSize="30sp" android:textColor="@color/colorPrimaryDark" />

    <Spinner
        android:id="@+id/select_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:entries="@array/categories_array"/>

    <TextView android:id="@+id/category" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text= "@string/category"
        android:gravity="center_horizontal" android:layout_marginTop="20dp"
        android:textSize="30sp" android:textColor="@color/colorCategory"
        android:layout_marginBottom="10pt"/>

    <ImageView
        android:id="@+id/image_switcher"
        android:layout_width="match_parent"
        android:layout_height="245dp" />

    <TextView android:id="@+id/name" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:text= "@string/name"
        android:gravity="center_horizontal" android:layout_marginTop="20dp"
        android:textSize="25sp" android:textColor="@color/colorBlue" />

    <Button android:id="@+id/next_image" android:layout_width="300dp"
        android:layout_height="60dp" android:text="@string/next_image"
        android:textSize="30dp"/>

</LinearLayout>
